fix js on mobile menu

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -14,6 +14,9 @@
     background: rgba(47, 152, 228, 0.75);
     -webkit-backdrop-filter: blur(12px);
     backdrop-filter: blur(12px);
+    .hide-menu {
+      top: 0;
+    }
   }
   &__row {
     align-items: center;
