--- a/src/assets/scss/layout/_nav.scss
+++ b/src/assets/scss/layout/_nav.scss
@@ -28,7 +28,7 @@
 
 .hide-menu {
   display: none;
-  top: 0;
+  top: -30px;
   position: absolute;
   left: 0;
   z-index: 100;
@@ -45,6 +45,8 @@
     display: block;
   }
 }
+
+
 
 .close {
   position: absolute;
